<?php

namespace App\Core\Storage;

interface DatabaseStorageInterface extends StorageInterface {

}
