<?php

namespace App\Core\Storage;

interface FileStorageInterface extends StorageInterface {

}
