<?php

namespace App\Model;

class ContractModel extends AbstractModel
{
    
}
