<?php

namespace App\View\Rest;

use App\View\AbstractView;

abstract class AbstractRestView extends AbstractView
{

}
