<?php

namespace App\View\Rest;

class ContractView extends AbstractRestView
{

}
